--- a/package.json
+++ b/package.json
@@ -57,24 +57,26 @@
     "webpack-hot-middleware": "^2.2.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.9.1",
     "babel-runtime": "^6.3.19",
     "bluebird": "^3.3.4",
     "classnames": "^2.1.2",
+    "griddle-react": "^0.5.1",
     "history": "^1.17.0",
     "lodash": "^4.8.2",
     "material-ui": "^0.15.0-alpha.2",
     "moment": "^2.12.0",
     "node-uuid": "^1.4.7",
     "rd3": "^0.5.3",
-    "react": "^0.14.8",
+    "react": "^15.1.0",
     "react-d3": "^0.4.0",
-    "react-datepicker": "^0.25.0",
-    "react-dom": "^0.14.0",
+    "react-datepicker": "^0.27.0",
+    "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
-    "react-tap-event-plugin": "^0.2.2",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.3.1",
     "redux-actions": "^0.9.0",
     "redux-persist": "^2.0.1",
