--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "react-d3": "^0.4.0",
     "react-datepicker": "^0.27.0",
     "react-dom": "^15.1.0",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
