--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-core": "^6.7.2",
+    "babel-core": "^6.18.2",
     "babel-eslint": "^5.0.0",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.2.8",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-rewire": "^1.0.0-rc-2",
     "babel-plugin-runtime": "^1.0.7",
     "babel-plugin-syntax-jsx": "^6.5.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.7.2",
@@ -68,13 +68,16 @@
     "node-uuid": "^1.4.7",
     "rd3": "^0.5.3",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.30.7",
     "react-d3": "^0.4.0",
     "react-datepicker": "^0.27.0",
     "react-dom": "^15.1.0",
-    "react-hot-loader": "^1.3.0",
+    "react-dropdown": "^1.2.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-redux": "^4.0.6",
     "react-router": "^2.0.1",
     "react-router-redux": "^4.0.0",
+    "react-select": "^1.0.0-rc.2",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.3.1",
     "redux-actions": "^0.9.0",
